--- a/service/css.html
+++ b/service/css.html
@@ -79,35 +79,6 @@ body {
 	border-bottom: 2px solid #f04000;
 	margin-bottom: -2px;
 }
-.ani
-{
-border: 1px solid #99cc99;
-position:relative;
-animation:"background-color:#f04000;" 3s infinite;
--webkit-animation:"background-color:#f04000;" 3s infinite; /*Safari and Chrome*/
-}
-
-@keyframes mymove
-{
-0% {}
-50% {background-color: #99cc99;}
-100% {}
-}
-
-@-webkit-keyframes mymove /*Safari and Chrome*/
-{
-0% {}
-50% {background-color: #99cc99;}
-100% {}
-}
-@keyframes "background-color:#f04000;" {
-	0% {}
-	100% {background: #f04000;}
-}
-@-webkit-keyframes "background-color:#f04000;" {
-	0% {}
-	100% {background: #f04000;}
-}
 </style>
 <script type="text/javascript">
 </script>
@@ -136,18 +107,9 @@ animation:"background-color:#f04000;" 3s infinite;
 		<span style="background:#834B27;">834B27</span>
 		<input maxlength="6" onblur="$('#pick').text(this.value);$('#pick').css('background', '#'+this.value);" />
 		<span id="pick">T</span>
-	</div><br>
-	<div class="header">
-		<img class="logo" src="img/logo.png"></img>
-		<a>菜单</a>
-		<a class="on">菜单</a>
-		<a>菜单</a>
-		<a>菜单</a>
-		<div class="edge"></div>
 	</div>
-	<div class="ani">
-	<p>qwe</p>
-	<p>123</p>
+	<div style="width:100%;height:100%;display:table-cell;vertical-align:middle;">
+		<div style="display:inline-block;height:50px;">1234qwe</span><img src=""/>
 	</div>
 	<!--div class="header-bar">
 		<span class="header-menu">Menu1</span>
