--- a/basin/mobile.html
+++ b/basin/mobile.html
@@ -21,17 +21,20 @@ body {
 }
 .page {
 	position: absolute;
+	display:-webkit-box;
+	-webkit-box-orient: vertical;
 	top: 0;
-	min-height: 100%;
+	left: 0;
+	height: 100%;
 	line-height: 1.5em;
 	color: #334f33;
 	background-color: #fcfffc;
-	display:-webkit-flex;
+	overflow-y: auto;
 }
 
 .title {
 	font-size: 1.5em;
-	line-height: 1.5em;
+	line-height: 1.6em;
 	font-weight: bold;
 	text-align: center;
 	color: #f04000;
@@ -44,6 +47,7 @@ body {
 }
 .content {
 	padding: 1em;
+	-webkit-box-flex: 1;
 }
 .toolbar {
 	padding: 0.5em 1em;
@@ -59,6 +63,8 @@ body {
 	padding: 0.3em 0.5em;
 	background-color: #f0f9f0;
 	border: 1px solid #CCECCC;
+	-webkit-transition-property: all;
+	-webkit-transition-duration: 500ms;
 }
 .button:hover {
 	background-color: #d0f9d0;
@@ -83,6 +89,13 @@ p {
 .tg {
 	color: #f04000;
 }
+.bm {
+	-webkit-mask-box-image: -webkit-linear-gradient(left, white, white 50%, transparent);
+}
+.bt {
+	-webkit-transition-property: all;
+	-webkit-transition-duration: 500ms;
+}
 
 .index {
 	margin: 0.5em;
@@ -92,6 +105,8 @@ p {
 	overflow: hidden;
 	background-color: #F9FFF9;
 	border: 0.1em solid #CCECCC;
+	-webkit-transition-property: all;
+	-webkit-transition-duration: 500ms;
 }
 .index:hover {
 	border-color: #99cc99;
@@ -102,6 +117,8 @@ p {
 	color: #009f3c;
 	background-color: #F6FCF6;
 	border-bottom: 0.1em solid #aaddaa;
+	-webkit-transition-property: all;
+	-webkit-transition-duration: 500ms;
 }
 .index:hover .index-title {
 	color: #f04000;
@@ -555,13 +572,14 @@ function transform(mode) {
 	}
 	page.css('z-index', '');
 	next.css('z-index', 4);
-	next.css('width', page.clientWidth+'px');
+	next.set('class', '-h');
+	//next.css('width', page.clientWidth+'px');
 	if (mode == 1) {
-		next.to('left:100%;', 1, 1, false, 'linear');
-		page.to('left:-100%;', 1, 1, true, 'linear');
+		next.css('-webkit-mask-box-image', '-webkit-linear-gradient(left, white, transparent)%');
+		next.set('class', '+bt');
+		next.css('-webkit-mask-box-image', '');
 	} else if (mode == 2) {
 		next.to('left:-100%;', 1, 1, false, 'linear');
-		page.to('left:100%;', 1, 1, true, 'linear');
 	} else if (mode == 3) {
 		next.to('opacity:0', 1, 1, false, 'linear');
 	}
@@ -577,9 +595,27 @@ function transform(mode) {
 	</div>
 	<div class="box box-size">
 		<div class="page" style="z-index:1;">
-			<div class="title bg">目录</div>
+			<div class="title bg bt">目录</div>
 			<div class="content tc">
 				<div class="index">
+					<div class="index-title bg">项目</div>
+					<div class="index-content">
+						<p>项目内容一项目内容一</p>
+						<p>项目内容二项目内容二</p>
+					</div>
+				</div><div class="index">
+					<div class="index-title bg">项目</div>
+					<div class="index-content">
+						<p>项目内容一项目内容一</p>
+						<p>项目内容二项目内容二</p>
+					</div>
+				</div><div class="index">
+					<div class="index-title bg">项目</div>
+					<div class="index-content">
+						<p>项目内容一项目内容一</p>
+						<p>项目内容二项目内容二</p>
+					</div>
+				</div><div class="index">
 					<div class="index-title bg">项目</div>
 					<div class="index-content">
 						<p>项目内容一项目内容一</p>
@@ -635,7 +671,7 @@ function transform(mode) {
 		</div>
 	</div>
 	<div class="box box-size">
-		<div class="page">
+		<div class="page bm">
 			<div class="title bg">标题</div>
 			<div class="content">
 				<div class="detail-title"><span class="tg">&raquo;&nbsp;</span>栏目</div>
